--- a/project/templates/list_operations.html
+++ b/project/templates/list_operations.html
@@ -31,7 +31,7 @@
 			<form action='./info_entirechroms'>
                 <input type="submit" value="info_entirechroms" />
             </form></li>
-            <li><p>calculate the fraction of unassembled sequences from source GRCh38: 		<i>{{active['fraction_unassembled']}}</i></p>
+            <li><p>calculate the fraction of unassembled sequences from entire chromosomes (source GRCh38): 		<i>{{active['fraction_unassembled']}}</i></p>
 			<form action='./fraction_unassembled'>
                 <input type="submit" value="fraction_unassembled" />
             </form></li>
