--- a/project/templates/projectspecification.html
+++ b/project/templates/projectspecification.html
@@ -22,7 +22,8 @@
     <p>The class ReaderGff3 realizes the interface provided by the Reader class, therefore the relation between the two classes is a realization. On the other hand there is a client-supplier relationship between the Reader_gff3 class and the DataSetGff3 class respectively, since the ReaderGff3 has to return a DataSetGff3 object, therefore the two have a dependency relationship.<br>
 	Between DataSet and DataSetGff3 there is a generalization, since DataSetGff3 inherits from DataSet.<br>
 	Linking the Operation class and the DataSet class there is a dependency, since all methods in the Operation class return a DataSet object. <br>
-	Pandas.DataFrame class is connected to the DataSet class though a unidirectional association.  
+	Pandas.DataFrame class is connected to the DataSet class though a unidirectional association. <br>
+	<img src="UML_AdvProgr_project.jpg" style="display: block; margin: 0 auto;">
     </p>
     
     <div style="position:relative">
