--- a/project/templates/homepage.html
+++ b/project/templates/homepage.html
@@ -11,7 +11,7 @@
     </head>
 
     <body style='margin: 25px 50px 75px 50px'>
-    <h1 style="text-align:center;color:	#2E8B57;"> Questions on the Human Genome </h1>
+    <h1 style="text-align:center;color:	#2E8B57;"> Insights on the Human Genome </h1>
     <p style="text-align:center"> This software allows to adress some questions on the human genome by performing a series of operations on a GFF3 file, which is an annotation file containing some information on the human genome. </p>
 
     <br>
