--- a/project/templates/projectspecification.html
+++ b/project/templates/projectspecification.html
@@ -26,8 +26,8 @@
 	<img src="UML_AdvProgr_project.jpg" style="display: block; margin: 0 auto;">
     </p>
     
-    <div style="position:relative">
-    <p style="position:fixed;bottom:2px;width:100%;font-size:14px;font-color:#696969:;text-align:center; background-color:white; "> Advanced Programming project, Genomics 2022/2023 - Ruggiero Alessia, Vincenzi Francesca, Mascagni Marianna  </p></div>
+	   
+    <p style="position:relative;bottom:2px;width:100%;font-size:14px;font-color:#696969:;text-align:center; background-color:white; "> Advanced Programming project, Genomics 2022/2023 - Ruggiero Alessia, Vincenzi Francesca, Mascagni Marianna  </p>
     
     </body>
 </html>
