--- a/project/templates/homepage.html
+++ b/project/templates/homepage.html
@@ -26,8 +26,7 @@
     <p> Click <a style="color:#2F4F4F" target="_blank" href="./project_document">here</a> for the description of the project in terms of software analysis, design and implementation </p>
 
 
-    <div style="position:relative">
-    <p style="position:fixed;bottom:2px;width:100%;font-size:14px;font-color:#696969:;text-align:center; background-color:white; "> Advanced Programming project, Genomics 2022/2023 - Ruggiero Alessia, Vincenzi Francesca, Mascagni Marianna  </p></div>
+    <p style="position:relative;bottom:2px;width:100%;font-size:14px;font-color:#696969:;text-align:center; background-color:white; "> Advanced Programming project, Genomics 2022/2023 - Ruggiero Alessia, Vincenzi Francesca, Mascagni Marianna  </p></div>
 
 
     </body>
