--- a/project/templates/homepage.html
+++ b/project/templates/homepage.html
@@ -23,7 +23,7 @@
     <br> <br>
 
     <h4> <bold> Project documentation </bold> </h4>
-    <p> Click <a style="color:#2F4F4F" target="_blank" href="./project_document">here</a> for the description of the project in terms of software analysis, design and implementation </p>
+    <p> Click <a style="color:#2F4F4F" target="_blank" href="./projectspecification">here</a> for the description of the project in terms of software analysis, design and implementation </p>
 
 
     <p style="position:relative;bottom:2px;width:100%;font-size:14px;font-color:#696969:;text-align:center; background-color:white; "> Advanced Programming project, Genomics 2022/2023 - Ruggiero Alessia, Vincenzi Francesca, Mascagni Marianna  </p></div>
