--- a/project/templates/list_operations.html
+++ b/project/templates/list_operations.html
@@ -50,6 +50,6 @@
             </form></li>
             </ol>
             <div style="position:relative">
-            <p style="position:fixed;bottom:2px;width:100%;font-size:14px;font-color:#696969:;text-align:center; background-color:white; "> Advanced Programming project, Genomics 2022/2023 - Ruggiero Alessia, Vincenzi Francesca, Mascagni Marianna  </p></div>
+            <p style="position:absolute;bottom:-50px;width:100%;font-size:14px;font-color:#696969:;text-align:center; background-color:white; "> Advanced Programming project, Genomics 2022/2023 - Ruggiero Alessia, Vincenzi Francesca, Mascagni Marianna  </p></div>
 
             </body></html>
