--- a/project/templates/style_non_tot.html
+++ b/project/templates/style_non_tot.html
@@ -18,7 +18,7 @@
 	<p style='border-left: 6px solid blue; background-color: #E0FFFF;line-height: 2;'>
 	&nbsp Only the first and last 10 rows of the dataframe are displayed, if you want to see the entire table click <a href={{redirect}}>here</a></p></p>If you want to access other operations, click <a href='active_operations'>here</a>, otherwise go back to <a href='/'>Homepage</a></p>
 	<div style="position:relative">
-    <p style="position:fixed;bottom:2px;width:100%;font-size:14px;font-color:#696969:;text-align:center; background-color:white; "> 
+    <p style="position:absolute;bottom:-50px;width:100%;font-size:14px;font-color:#696969:;text-align:center; background-color:white; "> 
         Advanced Programming project, Genomics 2022/2023 - Ruggiero Alessia, Vincenzi Francesca, Mascagni Marianna  </p></div>
 	</body>
 </html>
