--- a/project/templates/homepage.html
+++ b/project/templates/homepage.html
@@ -22,7 +22,7 @@
 
     <br> <br>
 
-    <h4> <bold> Project documentation </bold> </h4>
+    <h4> <bold> Project specification </bold> </h4>
     <p> Click <a style="color:#2F4F4F" target="_blank" href="./projectspecification">here</a> for the description of the project in terms of software analysis, design and implementation </p>
 
 
