--- a/project/templates/homepage.html
+++ b/project/templates/homepage.html
@@ -7,7 +7,7 @@
 <html>
     <head>
     <title> Homepage </title>
-    <style> h1{font-family:Candara;font-size:40px} h3{font-wight:bold;font-family:Georgia} h4{font-wight:bold;font-family:Georgia} p{font-family:Georgia} </style>
+    <style> h1{font-family:Candara;font-size:40px} h3{font-wight:bold;font-family:Georgia,serif} h4{font-wight:bold;font-family:Georgia,serif} p{font-family:Georgia,serif} </style>
     </head>
 
     <body style='margin: 25px 50px 75px 50px'>
@@ -18,19 +18,14 @@
 
     <h3> Getting information on the humane genome annotation file </h3>
     <p> For viewing, accessing and then executing the operations that can be done on the GFF3 file,
-    check the registry of active operations : <form action="./active_operations"> <input type="submit" value="check registry" style="color:#2F4F4F">  </form> </p>
+    check the registry of operations : <form action="./active_operations"> <input type="submit" value="check registry" style="color:#2F4F4F">  </form> </p>
 
     <br> <br>
 
-    <h4> <bold> Project specification </bold> </h4>
+    <h3> Project specification </h3>
     <p> Click <a style="color:#2F4F4F" target="_blank" href="./projectspecification">here</a> for the description of the project in terms of software analysis, design and implementation </p>
-
 
     <p style="position:absolute;bottom:-175px;width:100%;font-size:14px;font-color:#696969:;text-align:center; background-color:white; "> Advanced Programming project, Genomics 2022/2023 - Ruggiero Alessia, Vincenzi Francesca, Mascagni Marianna  </p></div>
 
-
     </body>
-
-
-
 </html>
