--- a/project/templates/homepage.html
+++ b/project/templates/homepage.html
@@ -18,7 +18,7 @@
 
     <h3> Getting information on the humane genome annotation file </h3>
     <p> For viewing, accessing and then executing the operations that can be done on the GFF3 file,
-    check the registry of operations : <form action="./active_operations"> <input type="submit" value="check registry" style="color:#2F4F4F">  </form> </p>
+    check the registry of operations : <form action="./registry_operations"> <input type="submit" value="check registry" style="color:#2F4F4F">  </form> </p>
 
     <br> <br>
 
