--- a/project/templates/style_operations.html
+++ b/project/templates/style_operations.html
@@ -15,7 +15,7 @@
 	{{ df | safe}}
 	{% endblock %}
 	</div>
-	</p>If you want to access other operations, click <a href='active_operations'>here</a>, otherwise go back to <a href='/'>Homepage</a></p>
+	</p>If you want to access other operations, click <a href='./registry_operations'>here</a>, otherwise go back to <a href='/'>Homepage</a></p>
 	<div style="position:relative">
     <p style="position:absolute;bottom:-50px;width:100%;font-size:14px;font-color:#696969:;text-align:center; background-color:white;"> 
         Advanced Programming project, Genomics 2022/2023 - Ruggiero Alessia, Vincenzi Francesca, Mascagni Marianna  </p></div>
