--- a/project/templates/homepage.html
+++ b/project/templates/homepage.html
@@ -11,12 +11,12 @@
     </head>
 
     <body style='margin: 25px 50px 75px 50px'>
-    <h1 style="text-align:center;color:	#2E8B57;"> Insights on the Human Genome </h1>
-    <p style="text-align:center"> This software allows to adress some questions on the human genome by performing a series of operations on a GFF3 file, which is an annotation file containing some information on the human genome. </p>
+    <h1 style="text-align:center;color:	#2E8B57;"> Insights on the human genome </h1>
+    <p style="text-align:center"> This software allows to adress some questions on the human genome by performing a series of operations on a GFF3 file, which is a genome annotation file. </p>
 
     <br>
 
-    <h3> Getting information on the humane genome annotation file </h3>
+    <h3> Getting information on the human genome annotation file </h3>
     <p> For viewing, accessing and then executing the operations that can be done on the GFF3 file,
     check the registry of operations : <form action="./registry_operations"> <input type="submit" value="check registry" style="color:#2F4F4F">  </form> </p>
 
